<resources>
    <string name="app_name">inf8405-BluetoothMap</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="scan_on">Scanning…</string>
    <string name="scan_off">Scan?</string>
    <string name="fab_description">Toggle device list</string>
    <string name="btn_ok">OK</string>
    <string name="btn_star_description">Toggle favorite</string>
    <string name="btn_navigate">How to get there?</string>
    <string name="btn_share">Share</string>
    <string name="device_is_starred">Device is starred?</string>
    <string name="swap_theme">SWAP THEME</string>
    <string name="btn_sensors">Show analytics</string>
    <string name="txt_accelerometer">Accelerometer</string>
    <string name="txt_gyroscope">Gyroscope</string>
    <string name="label_sensor_x" translatable="false">X</string>
    <string name="label_sensor_y" translatable="false">Y</string>
    <string name="label_sensor_z" translatable="false">Z</string>
    <string name="txt_accelerometer_value" translatable="false">%1$.2f m/s^2</string>
    <string name="txt_gyroscope_value" translatable="false">%1$.1f rad/s</string>
    <string name="img_userPicture_description">User profile picture</string>
    <string name="create_user_dialog_title">You are not currently logged in</string>
    <string name="create_user_dialog_message">Do you wish to create a new account?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_user_pic_hint">Press to take a new picture</string>
    <string name="txt_username_label">Username</string>
    <string name="btn_save_changes">Save changes</string>
    <string name="btn_user_delete">Delete account data and logout</string>
    <string name="signout_dialog_title">Are you sure?</string>
    <string name="signout_dialog_message">All your data will be lost</string>
    <string name="bandwidth_rx" translatable="false">Downlink: %s</string>
    <string name="bandwidth_tx" translatable="false">Uplink: %s</string>
    <string name="swap_locale_fr">Switch to French</string>
    <string name="swap_locale_en">Switch to English</string>
    <string name="txt_battery_app">Application battery usage</string>
    <string name="txt_battery_scan">Bluetooth scan battery usage</string>
    <string name="txt_battery_usage_hint">Battery percentage</string>
    <string name="txt_energy_usage_hint">Capacity</string>
    <string name="txt_battery_value" translatable="false">%1$L</string>
    <string name="msg_bluetooth_lost">Lost Bluetooth, pausing scan…</string>
    <string name="msg_bluetooth_restored">Bluetooth reactivated, resuming scan…</string>
    <string name="msg_permission_denied">Permission denied</string>
    <string name="msg_permission_denied_bluetooth">Bluetooth permission denied</string>
    <string name="msg_auth_fail">Authentication failed.</string>
    <string name="reset_battery_values">Reset battery usage</string>
</resources>
