<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserInfoDialogFragment"
        android:orientation="vertical"
        android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp">
            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_image_upload"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_person_24"
                    android:contentDescription="@string/img_userPicture_description">
            </ImageButton>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/btn_user_pic_hint"
                    android:layout_margin="16dp"
                    android:textStyle="italic" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_username_label"
                android:id="@+id/txt_username_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_changes"
            android:id="@+id/btn_save" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_delete"
            android:id="@+id/btn_delete_user" />
</LinearLayout>
