<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <TextView
                android:layout_height="wrap_content"
                android:id="@+id/textView_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

        <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/baseline_star_outline_24"
                android:id="@+id/btn_toggleStar"
                android:contentDescription="@string/btn_star_description"
                />

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_deviceDescription" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/btn_navigate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_navigate"
                android:layout_weight="1" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_share"
                android:id="@+id/btn_share"
                android:contentDescription="@string/btn_share" />
    </LinearLayout>

</LinearLayout>
